# bioRxiv-searcher

./: .gitignore  AGENTS.template.md  DESIGN.md  LICENSE  README.ja.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
biorxiv_search/: __init__.py
biorxiv_search/application/: __init__.py  service.py
biorxiv_search/domain/: __init__.py  errors.py  identifiers.py  models.py  text.py
biorxiv_search/infrastructure/: biorxiv.py  cache.py  europe_pmc.py  http.py
tests/: test_biorxiv.py  test_cache.py  test_europe_pmc.py  test_http.py  test_identifiers.py  test_service.py
