[project]
name = "biorxiv-searcher"
version = "0.1.0"
description = "Search bioRxiv metadata through Europe PMC and the bioRxiv API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biorxiv_search"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
